--- a/style.css
+++ b/style.css
@@ -1,99 +1,286 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap');
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
 .fondo{
-    background-image: url(./multimedia/Multimedia/textura\ madera\ fondo.jpg);
+    background-image: url(./multimedia/Multimedia/fondo\ trabajo\ final.jpg);
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
+
+body{
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
-body{
-    font-family: sans-serif;
 
-}
+/* main{
+    margin-top: 5rem;
+} */
 
 .header {
-    background-color: rgba(29, 27, 26, 0.89);
-    height: 80px;
-    position: fixed;
+    background-color: #1d1b1a;
+    height: 0;
+    margin-bottom: 5rem;
     width: 100%;
     top: 0;
     left: 0;
 }
 
-.nav{
-    display: flex;
-    justify-content: space-between;
-    max-width: auto;
-    margin: 0 auto;
+.animacion{
+    color: rgb(150, 112, 65);
+    text-size-adjust: auto; 
+
+    transition: 0.5s;
 }
+
+.redondeado{
+    border-radius: 5px;
+}
+
 
 .nav-link{
-    color: rgb(167, 165, 70);
+    color: rgb(236, 236, 221);
     text-decoration: none;
+    padding: 0 10px;
+    row-gap: 20px;
 }
 
-.logo {
-    margin: 5px 5px;
-    padding: 5px 5px;
-    line-height: 200px;
+.nav-item{
+    display: flex;
+    margin-right: 10px;
+    list-style: none;
+    font-size: 13px;
+    margin:0px 10px;
+    line-height: 50px;
+    text-transform: uppercase;  
+    border-radius: 5px;
+    transition: 1s; 
 }
 
-.nav-menu {
-    display:flex;
-    margin-right: 40px;
+.nav-item:hover{
+background-color: rgba(76, 123, 145, 0.726);
+}
+
+/* INICIO */
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 5rem;
+    margin-top: 1rem;
+}
+
+ul{
     list-style: none;
 }
 
-.nav-menu-item {
-    font-size: 15px;
-    margin:0 10px;
-    line-height: 80px;
+.lista-item{
     text-transform: uppercase;
-    width: max-content;
-    border-width: 5px solid rgb(199, 172, 172);
+    font-size: 35px;   
 }
-.nav-menu-link{
-    padding: 8px 30px;
+
+.lista-nav{
+    text-align: center;
+    margin-top: 20px;
     border-radius: 5px;
-    transition: 1s;
+    background-color: #0c0c0be3;
+    transition: 0.5s;
 }
 
-.nav-menu-link:hover{
-background-color: rgb(7, 7, 12);
+.lista-nav>a{
+    color:#967041;
 }
-.grid-item{
- display: flex;
- align-items: center;
- justify-content: center;
- border-radius: 5px;
- width: 250px;
- height: 200px;
 
+.lista-nav:hover{
+    background-color: #131211;
+    transform: scale(1.1);
 }
-.grid-container{
+
+.lista{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
-    grid-auto-rows: minmax(200px,auto);
+    margin: 15px 30px;
+    width: 600px;
+    height: auto;
+}
+
+.img{
+    height: 450px;
+    width: 1000px;
+}
+
+.img>img{
+    border-radius: 5px;
+    box-shadow: 10px 5px 5px black;
+}
+
+/* MATERIARES */
+.container1{
+    margin: 10px 20px;
     gap: 20px;
     padding: 20px;
     border-radius: 5px;
-       
 }
-.h1{
-    font-size: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-    color: rgb(1, 3, 7);
 
+/* GALERIA */
+.container2{
+    row-gap: 10px;
+    column-gap: 10px;
+    margin: 10px 10px;
+    padding: 50px 0 10px;
+    border-radius: 5px
 }
+
+.img-decorate{
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.img-decorate:hover{
+    transform: scale(0.9);
+}
+
+.row{
+    row-gap: 20px;
+    border-radius: 5px;
+    border-color: #967041;
+    box-shadow: 10px black;
+}
+
+.col{
+    column-gap: 20px;
+    border-radius: 5px;
+    border-color:  #967041;
+    box-shadow: 10px black;
+}
+
+.imagen{
+    box-shadow: #1d1b1a;
+}
+
+.card{
+    margin: 10px auto 10px;
+    border-color:  #967041;
+    border-radius: 5px;
+    border-width: 10px;
+    border-style: solid;
+}
+
 .footer{
-    background-color: secondary;
-    padding: 1em 0;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
+    background-color: #1d1b1a;
+    display: flex;
     width: 100%;
+    height: 50px;
+    color:#967041;
+    text-align: center;
+    justify-content: center;
+}
+
+.contact{
+    margin: 200px;
+    margin-top: 100px;
+    justify-content: center;
+    background-color: #1d1b1a;
+    color: aliceblue;
+    font-size: 18px;
+    border-radius: 15px;
+    padding: 25px;
+    display: grid;
+    gap: 25px;
+    box-shadow: 10px black;
+}
+
+.contact-tittle{
+    font-size: 30px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.contact-details,
+.contact-form{
+    display: grid;
+    gap: 20px;
+}
+
+.contact-details-group,
+.contact-form-group{
+    display: grid;
+    gap: 5px;
+}
+
+.contact-lebel{
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.contact-form input,
+.contact-form textarea{
+  border-radius: 10px;
+  border: none;
+  height: 30px;
+  padding: 5px 10px;  
+}
+
+.contact-form textarea{
+    height: auto;
+    resize: vertical;
+}
+
+.contact-form-submit{
+    width: 100px;
+    height: 50px;
+    background-color: rgb(11, 41, 68);
+    border-radius: 10px;
+    color: aliceblue;
+    border: 1px solid  #1d1b1a;
+    margin-top: 10px;
+    transition: 0.3s;
+}
+
+.contact-form-submit:hover{
+    box-shadow: 0 0 14px rgb(192, 192, 76);
+}
+
+.social-item{
+    list-style: none;
+    text-decoration: none;
+}
+
+a{
+   text-decoration: none; 
+}
+
+.social-list{
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    color: aliceblue;
+}
+
+.social-list img{
+    height: 25px;
+    width: auto;
+}
+
+.social-list img{
+    box-shadow: 0 0 14px rgb(192, 192, 76);
+}
+
+.nosotros{
+    margin-top: 90px;
+    text-align: center;
+    ;
+}
+
+h2{
+    text-align: center;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 3rem;
 }
