--- a/style.css
+++ b/style.css
@@ -176,10 +176,12 @@ ul{
     background-color: #1d1b1a;
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 30px;
     color:#967041;
     text-align: center;
     justify-content: center;
+    padding: 3rem;
+    margin-bottom: auto;
 }
 
 .contact{
